# memri

./: .gitignore  MEMRI_DESIGN_DOC.md  README.md  pyproject.toml
.github/workflows/: ci.yml
memri/: __init__.py  cli.py  config.py
memri/core/: embedder.py  graph_memory.py  memory.py  observer.py  prompts.py  reflector.py  strategist.py  token_counter.py
memri/dashboard/: app.py
memri/graph/: embeddings.py  persistence.py  store.py  types.py
memri/ingestion/: auto_detect.py  claude_code.py  codex.py  cursor.py  watcher.py
memri/llm/: cost_tracker.py  graph_adapter.py  provider.py
memri/mcp/: server.py
memri/services/: ingestion.py  layer0.py  query_classifier.py  query_processor.py  ranker.py  reflection.py  retrieval.py
memri/storage/: base.py  layer2.py  sqlite_store.py
tests/: test_memory.py  test_observer.py  test_reflector.py
tests/benchmarks/: run_locomo.py  run_longmemeval.py
