[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memri"
version = "1.0.1"
description = "Persistent graph-based memory for Claude Code, Cursor and Codex — cross-session recall via MCP"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "memory", "ai", "mcp", "claude", "claude-code", "cursor", "codex",
    "coding-agent", "persistent-memory", "long-term-memory", "mcp-server",
    "graph-memory", "ai-memory", "llm-memory", "agent-memory",
    "cross-session", "context", "recall", "observational-memory"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anthropic>=0.50.0",
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
    "aiofiles>=23.0.0",
    "click>=8.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "mcp>=1.0.0",
    "numpy>=1.26.0",
    "watchdog>=4.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0.0",
]
graph = [
    "networkx>=3.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "pydantic>=2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/SarthakK337/memri"
Repository = "https://github.com/SarthakK337/memri"
"Bug Tracker" = "https://github.com/SarthakK337/memri/issues"
Changelog = "https://github.com/SarthakK337/memri/releases"

[project.scripts]
memri = "memri.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["memri"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
